# GiGi

./: CMakeLists.txt  README
GG/: Base.h  Button.h  DropDownList.h  Edit.h  GUI.h  ListBox.h  Menu.h  PluginInterface.h  Scroll.h  Signal.h  SignalTemplate.h  SignalsAndSlots.h  Slider.h  Spin.h  Timer.h  Wnd.h
GG/SDL2/: SDL2GUI.h
GG/adobe/: vector.hpp
GG/dialogs/: ColorDlg.h
cmake/: FindLTDL.cmake  GiGiSDL2.pc.in
src/: CMakeLists.txt  Font.cpp  GUI.cpp  ScrollPanel.cpp
src/SDL2/: CMakeLists.txt  SDL2GUI.cpp
tutorial/: CMakeLists.txt
